Agegado del mapa y busqueda
Se implemento la opcion para buscar ubicaciones y se agrego el mapa con
la API de google maps
**Falta mejorar la presentacion y mas datos**

--- a/cuauhtemovil/src/pages/home/home.html
+++ b/cuauhtemovil/src/pages/home/home.html
@@ -27,7 +27,7 @@
 		<ion-row>
 			 <ion-col col-2></ion-col>
 			 <ion-col col-8>
-				  <button ion-button class="main-button" >Buscar Cuauhtémovil</button>
+				  <button ion-button class="main-button" (click)="launchLocationPage()">Buscar Cuauhtémovil</button>
 			 </ion-col>
 		  </ion-row>
 		
