--- a/cuauhtemovil/src/pages/search/search.html
+++ b/cuauhtemovil/src/pages/search/search.html
@@ -1,3 +1,4 @@
+<!--
 <ion-header>
   <ion-navbar color="secondary">
     <ion-title text-center>
@@ -6,11 +7,48 @@
   </ion-navbar>
 </ion-header>
 
-
 <ion-content padding>
 	<ion-row>
 		<ion-column>
 		
 		</ion-column>
 	</ion-row>
+</ion-content>
+-->
+
+<ion-header>
+    <ion-navbar color="secondary">
+        <ion-buttons left>
+            <button ion-button (click)="close()">Cancel</button>
+        </ion-buttons>
+        <ion-buttons right>
+            <button [disabled]="saveDisabled" ion-button (click)="save()">Save</button>
+        </ion-buttons>
+    </ion-navbar>
+ 
+    <ion-toolbar color="primary">
+        <ion-searchbar [(ngModel)]="query" (ionInput)="searchPlace()"></ion-searchbar>
+    </ion-toolbar>
+ 
+    <ion-list>
+        <ion-item *ngFor="let place of places" (touchstart)="selectPlace(place)">{{place.description}}</ion-item>
+    </ion-list>
+ 
+</ion-header>
+ 
+<ion-content padding>
+ 	 <ion-row>
+		 <ion-col col-2></ion-col>
+		 <ion-col col-10>
+			<h3 ionic-text>Selecciona tu destino</h3>
+		 </ion-col>
+	 </ion-row>
+    <div #pleaseConnect id="please-connect">
+        <p>Please connect to the Internet...</p>
+    </div>
+ 
+    <div #map id="map">
+        <ion-spinner></ion-spinner>
+    </div>
+ 
 </ion-content>
