--- a/cuauhtemovil/src/pages/home/home.html
+++ b/cuauhtemovil/src/pages/home/home.html
@@ -27,14 +27,14 @@
 		<ion-row>
 			 <ion-col col-2></ion-col>
 			 <ion-col col-8>
-				  <button ion-button class="main-button" (click)="launchLocationPage()">Buscar Cuauhtémovil</button>
+				  <button ion-button [navPush]="pushPage" class="main-button" >Buscar Cuauhtémovil</button>
 			 </ion-col>
 		  </ion-row>
 		
 		<ion-row>
 			 <ion-col col-2></ion-col>
 			 <ion-col col-8>
-				  <button ion-button class="main-button" >ser Cuauhtémovil</button>
+				  <button ion-button class="main-button" >Ser Cuauhtémovil</button>
 			 </ion-col>
 		</ion-row>
 		
