--- a/cuauhtemovil/src/pages/search/search.html
+++ b/cuauhtemovil/src/pages/search/search.html
@@ -18,12 +18,9 @@
 
 <ion-header>
     <ion-navbar color="secondary">
-		 <ion-title text-center>
-      	<img class="logo" src="assets/images/title.jpg" />
+		 <ion-title start>
+      	Buscar Cuauhtémovil
     	</ion-title>
-        <ion-buttons left>
-            <button ion-button (click)="close()" icon-only clear><ion-icon name="arrow-back"></ion-icon></button>
-        </ion-buttons>
     </ion-navbar>
  
     <ion-toolbar color="primary">
@@ -37,6 +34,7 @@
 </ion-header>
  
 <ion-content padding>
+	
  	 <ion-row>
 		 <ion-col col-2></ion-col>
 		 <ion-col col-10>
