--- a/cuauhtemovil/src/pages/login/login.html
+++ b/cuauhtemovil/src/pages/login/login.html
@@ -38,7 +38,7 @@
 		  <ion-row>
 			 <ion-col col-1></ion-col>
 			 <ion-col col-10>
-				 <a href="https://www.facebook.com"><ion-label color="light">¿No tienes cuenta? Resgistrate.</ion-label></a>
+				 <a [navPush]="pushPage" href="#"><ion-label color="light">¿No tienes cuenta? Resgistrate.</ion-label></a>
 			 </ion-col>
 		  </ion-row>
 			 
