Formulario para crear cuenta disenio

--- a/cuauhtemovil/src/pages/create-user/create-user.html
+++ b/cuauhtemovil/src/pages/create-user/create-user.html
@@ -47,13 +47,19 @@
 		  		</ion-col>
 	  		</ion-row>
 
-	  	</ion-list>
-	  	<ion-list id="list">
+	  		<ion-row>
+	  			<ion-col>
+	  				<ion-item>
+						<ion-label floating>Fecha de nacimiento:</ion-label>
+						<ion-datetime displayFormat="DD/MMMM/YYYY" pickerFormat="DD MMMM YYYY"></ion-datetime>
+					</ion-item>
+	  			</ion-col>
+	  		</ion-row>
 
 	  		<ion-row>
 	  			<ion-col>
 	  				<ion-item>
-			  			<ion-label floating>Correo:</ion-label>
+			  			<ion-label floating>Correo (Preferente institucional):</ion-label>
 			  			<ion-input type="email"></ion-input>
 		  			</ion-item>
 		  		</ion-col>
@@ -76,6 +82,13 @@
 		  			</ion-item>
 		  		</ion-col>
 	  		</ion-row>
+
+	  		<ion-row>
+			 	<ion-col col-4></ion-col>
+			 	<ion-col col-4>
+					<button id="finalizar" ion-button class="login-button" (click)="createUser()">Finalizar</button>
+			 	</ion-col>
+		  	</ion-row>
 
 	  	</ion-list>
   	</form>
