--- a/cuauhtemovil/src/pages/result/result.html
+++ b/cuauhtemovil/src/pages/result/result.html
@@ -1,11 +1,69 @@
 <ion-header>
     <ion-navbar color="secondary">
-		 <ion-title start>
+		<ion-title start>
       	Buscar Cuauhtémovil
     	</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+
+	<ion-row text-center>
+		<ion-col col-12>
+			<h4 ion-text color="primary">Datos del Conductor</h4>
+		</ion-col>
+	</ion-row>
+
+	<ion-list id="list">
+		<ion-row>
+	  			<ion-col>
+	  				<ion-item>
+			  			<ion-avatar item-start>
+			  				<img src="https://www.shareicon.net/download/2016/08/05/806962_user_512x512.png">
+			  			</ion-avatar>
+			  			<h2 ion-text color="primary">Nombre:</h2> <h4>Jose Manuel Gama Estrada</h4>
+		  			</ion-item>
+		  			<ion-item>
+		  				<ion-row>
+			  				<ion-col col-6>
+			  					<h2 ion-text color="primary">Edad:</h2> <h4>20 años</h4>
+			  				</ion-col>
+			  				<ion-col col-6>
+			  					<h2 ion-text color="primary">Matricula:</h2> <h4>A201610012</h4>
+			  				</ion-col>
+		  				</ion-row>
+		  			</ion-item>
+		  		</ion-col>
+	  		</ion-row>
+	</ion-list>
+
+	<ion-row text-center>
+		<ion-col col-12>
+			<h4 ion-text color="primary">Datos del Coche</h4>
+		</ion-col>
+	</ion-row>
+
+	<ion-list id="list">
+		<ion-row>
+	  			<ion-col>
+	  				<ion-item>
+			  			<ion-avatar item-start>
+			  				<img src="https://images.vexels.com/media/users/3/128998/isolated/preview/15630dcae2578399bfabe65c4290ed8a-vintage-car-flat-icon-by-vexels.png">
+			  			</ion-avatar>
+			  			<h2 ion-text color="primary">Nombre:</h2> <h4>Jose Manuel Gama Estrada</h4>
+		  			</ion-item>
+		  			<ion-item>
+		  				<ion-row>
+			  				<ion-col col-6>
+			  					<h2 ion-text color="primary">Edad:</h2> <h4>20 años</h4>
+			  				</ion-col>
+			  				<ion-col col-6>
+			  					<h2 ion-text color="primary">Matricula:</h2> <h4>A201610012</h4>
+			  				</ion-col>
+		  				</ion-row>
+		  			</ion-item>
+		  		</ion-col>
+	  		</ion-row>
+	</ion-list>
 
 </ion-content>
