datos del coche

--- a/cuauhtemovil/src/pages/result/result.html
+++ b/cuauhtemovil/src/pages/result/result.html
@@ -50,15 +50,22 @@
 			  			<ion-avatar item-start>
 			  				<img src="https://images.vexels.com/media/users/3/128998/isolated/preview/15630dcae2578399bfabe65c4290ed8a-vintage-car-flat-icon-by-vexels.png">
 			  			</ion-avatar>
-			  			<h2 ion-text color="primary">Nombre:</h2> <h4>Jose Manuel Gama Estrada</h4>
+			  			<ion-row>
+			  				<ion-col col-6>
+			  					<h2 ion-text color="primary">Modelo:</h2> <h4>Escape</h4>
+			  				</ion-col>
+			  				<ion-col col-6>
+			  					<h2 ion-text color="primary">Marca:</h2> <h4>Ford</h4>
+			  				</ion-col>
+			  			</ion-row>
 		  			</ion-item>
 		  			<ion-item>
 		  				<ion-row>
 			  				<ion-col col-6>
-			  					<h2 ion-text color="primary">Edad:</h2> <h4>20 años</h4>
+			  					<h2 ion-text color="primary">Placas:</h2> <h4>UGU-9889</h4>
 			  				</ion-col>
 			  				<ion-col col-6>
-			  					<h2 ion-text color="primary">Matricula:</h2> <h4>A201610012</h4>
+			  					<h2 ion-text color="primary">Color:</h2> <h4>Blanco</h4>
 			  				</ion-col>
 		  				</ion-row>
 		  			</ion-item>
