funcionamiento del boton de Ver

--- a/cuauhtemovil/src/pages/search-results/search-results.html
+++ b/cuauhtemovil/src/pages/search-results/search-results.html
@@ -21,7 +21,7 @@
     		<h2 ion-text color="secondary">{{ruta}}</h2> 
 			<h3 ion-text color="secondary">De tu destino</h3>
     		<p ion-text color="primary">Salida • 2:00pm</p>
-    		<button ion-button clear item-right>VER</button>
+    		<button ion-button clear item-right [navPush]="pushPage">VER</button>
   		</ion-item>
 	</ion-list>
 </ion-content>
